# wanderer

./: .gitignore  Exoplanet TSO - Double AOR SPIDERMAN Phase Curve with PLD - CH2 Backup.ipynb  Exoplanet TSO - Double AOR SPIDERMAN Phase Curve with PLD.ipynb  Exoplanet TSO Pipeline Mean.ipynb  Exoplanet TSO Pipeline Median.ipynb  Exoplanet TSO Pipeline.ipynb  Exoplanet TSO Pipeline.py  ExoplanetTSO_Auxiliary.py  Exoplanet_TSO_-_Combined_PLD_Example.ipynb  Exoplanet_TSO_-_Load_and_View_Extracted_Data.py  Exoplanet_TSO_-_Photometric_Extraction_Pipeline.ipynb  Exoplanet_TSO_-_Photometric_Extraction_Pipeline.py  Exoplanet_TSO_Pipeline.py  Exoplanet_TSO_Pipeline_Median.ipynb  JWST - NIRCam - Level 3 - TSO Pipeline - Draft - 07-09-16.py  JWST - NIRCam - Level 3 - TSO Pipeline.py  JWST GTO Target List Database Search.htm  MANIFEST.in  Phase Curve Exoplanet TSO - Combined PLD Reduction - Updated.ipynb  Phase Curve Exoplanet TSO - Photometric Extraction Pipeline.ipynb  Phase Curve Exoplanet TSO - Photometric Extraction Pipeline.py  Planet Name Exoplanet TSO - Combined PLD Reduction.ipynb  PlanetName_-_Phase_Curve_Exoplanet_TSO_-_Combined_KR_Reduction2_-_Updated.py  README.md  Spitzer - Simple Run Through.ipynb  auxiliary.py  example_batman_lmfit_ing.py  extract_all_example_chX.sh  fits_input_file.txt  gaussian_fitting_spitzer_all_methods.py  gaussian_fitting_spitzer_lmfit.py  jd.py  julian_date.py  make_aperture_photometry_allfits.py  old_README.md  orig_setup.py  run_all_gj1214.sh  setup.cfg  setup.py  test_bokeh.html  (+1 more)
.ipynb_checkpoints/: Exoplanet TSO Pipeline-checkpoint.ipynb  (+1 more)
(+14 files in other folders)
