[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[build_docs]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[tool:pytest]
minversion = 3.0
norecursedirs = build docs/_build
doctest_plus = enabled
addopts = -p no:warnings

[ah_bootstrap]
auto_use = True

[flake8]
exclude = extern,sphinx,*parsetab.py

[pycodestyle]
exclude = extern,sphinx,*parsetab.py

[metadata]
package_name = skywalker
description = SKYWALKER
long_description = SKYWALKER: Spitzer Key Yield With All that Lightcurve Exoplanet Research
author = Carlos Munoz, Jonathan Fraine, Kevin Stevenson
author_email = cmunoz@stsci.edu
license = BSD 3-Clause
url = https://github.com/munozcar/SKYWALKER
edit_on_github = False
github_project = munozcar/SKYWALKER
# install_requires should be formatted as a comma-separated list, e.g.:
# install_requires = astropy, scipy, matplotlib
install_requires = astropy
# version should be PEP440 compatible (https://www.python.org/dev/peps/pep-0440/)
version = 0.0.dev
# Note: you will also need to change this in your package's __init__.py
minimum_python_version = 3.5

[entry_points]

astropy-package-template-example = packagename.example_mod:main

